welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
cigarParty:9: error: not found: value cigar
    if (cigar<=60 && cigars>=40){
        ^